--- a/Kunja/Kunja/Views/Account/Register.cshtml
+++ b/Kunja/Kunja/Views/Account/Register.cshtml
@@ -18,39 +18,39 @@
 		</div>
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(m => m.voornaam, new { @class = "col-md-2 control-label" })
+		@Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
 		<div class="col-md-10">
-			@Html.TextBoxFor(m => m.voornaam, new { @class = "form-control" })
+			@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
 		</div>
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(m => m.achternaam, new { @class = "col-md-2 control-label" })
+		@Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
 		<div class="col-md-10">
-			@Html.TextBoxFor(m => m.achternaam, new { @class = "form-control" })
+			@Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
 		</div>
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(m => m.adres, new { @class = "col-md-2 control-label" })
+		@Html.LabelFor(m => m.Address, new { @class = "col-md-2 control-label" })
 		<div class="col-md-10">
-			@Html.TextBoxFor(m => m.adres, new { @class = "form-control" })
+			@Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
 		</div>
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(m => m.woonplaats, new { @class = "col-md-2 control-label" })
+		@Html.LabelFor(m => m.City, new { @class = "col-md-2 control-label" })
 		<div class="col-md-10">
-			@Html.TextBoxFor(m => m.woonplaats, new { @class = "form-control" })
+			@Html.TextBoxFor(m => m.City, new { @class = "form-control" })
 		</div>
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(m => m.postcode, new { @class = "col-md-2 control-label" })
+		@Html.LabelFor(m => m.PostalCode, new { @class = "col-md-2 control-label" })
 		<div class="col-md-10">
-			@Html.TextBoxFor(m => m.postcode, new { @class = "form-control" })
+			@Html.TextBoxFor(m => m.PostalCode, new { @class = "form-control" })
 		</div>
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(m => m.telNr, new { @class = "col-md-2 control-label" })
+		@Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
 		<div class="col-md-10">
-			@Html.TextBoxFor(m => m.telNr, new { @class = "form-control" })
+			@Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
 		</div>
 	</div>
 	<div class="form-group">
